// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`answer with a trailing unit preview should render a percentage answer 1`] = `
<styled.div>
  <Label
    description="Description"
  >
    Label
  </Label>
  <InputWithUnit
    trailing={true}
    unit="%"
  />
</styled.div>
`;

exports[`answer with a trailing unit preview should render a unit answer 1`] = `
<styled.div>
  <Label
    description="Description"
  >
    Label
  </Label>
  <InputWithUnit
    trailing={true}
    unit="cm"
  />
</styled.div>
`;
